--- a/warehouses/templates/warehouses/movements/add.html
+++ b/warehouses/templates/warehouses/movements/add.html
@@ -16,11 +16,20 @@
     <h4>{% blocktrans %}Step {{ step }} of {{ step_count }}{% endblocktrans %}</h4>
     <form action="." method="post">
         {% csrf_token %}
+        {% for prev_form in form_list %}
+        {% if forloop.counter < step %}
+        {{ prev_form.as_p }}
+        {% endif %}
+        {% endfor %}
         {{ form.as_p }}
         <input type="hidden" name="{{ step_field }}" value="{{ step0 }}" />
         {{ previous_fields|safe }}
         <div class="actions">
+            {% if step == step_count %}
             <input class="save" type="submit" value="{% trans 'Save' %}" />
+            {% else %}
+            <input class="next" type="submit" value="{% trans 'Next' %}" />
+            {% endif %}
         </div>
     </form>
 {% endblock %}
