Added base support per "back" action on form wizards.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@193 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -314,7 +314,7 @@ form .message {
 .people, .calendar, .documents, .passwords, .accounts, .partners, .uoms, .roles,
 .save, .load, .refresh, .yes, .no, .enter, .exit, .person, .warehouses,
 .projects, .areas, .milestones, .tickets, .timelines, .suppliers, .customers,
-.telephones, .addresses, .supplies, .jobs, .next, .back {
+.telephones, .addresses, .supplies, .jobs, .next, .previous {
     padding: 5px 0 5px 25px;
     background-position: left center;
     background-repeat: no-repeat;
