Refactoring of "projects" app. WARNING: No backward compatibility!!
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@198 71535020-02ba-11df-897e-95fb7fca2173

--- a/projects/templates/projects/tickets/view.html
+++ b/projects/templates/projects/tickets/view.html
@@ -38,9 +38,10 @@
     </ul>
     {% endif %}
     {% get_comment_count for ticket as comment_count %}
-    <p>{% blocktrans %}<strong>{{ comment_count }}</strong> comments have been posted.{% endblocktrans %}</p>
+    <p>{% blocktrans %}<strong>{{ comment_count }}</strong> comments.{% endblocktrans %}</p>
     {% get_comment_form for ticket as form %}
     <form action="{% comment_form_target %}" method="post">
+        {% csrf_token %}
         <input type="hidden" name="next" value="{{ ticket.get_absolute_url }}" />
         {% for field in form %}
         {% if field.is_hidden %}
