--- a/core/templates/search_box.html
+++ b/core/templates/search_box.html
@@ -4,13 +4,26 @@
     <form action="." method="post">
         {% csrf_token %}
         {% if search_fields %}
+        {% for field, value in search_fields %}
+        {% if value %}
+        <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
+        <input class="query" type="text" name="{{ field.attname }}" value="{{ value }}"/>
+        <button class="delete" type="submit" name="sub_{{ field.attname }}"><span>-</span></button>
+        <br/>
+        {% endif %}
+        {% endfor %}
         <select class="search_field" name="search_field">
-            {% for label, value in search_fields %}
-            <option value="{{ value }}">{% trans label %}</option>
+            {% for field, value in search_fields %}
+            {% if not value %}
+            <option value="{{ field.name }}">{% trans field.verbose_name|capfirst %}</option>
+            {% endif %}
             {% endfor %}
         </select>
         {% endif %}
-        <input class="query" type="text" name="query"/>
+        <input class="query" type="text" name="search_query"/>
+        {% if search_fields %}
+        <button class="add" type="submit" name="add_search_field"><span>+</span></button>
+        {% endif %}
         <input class="search" type="submit" name="search" value="{% trans 'Search' %}"/>
     </form>
 </div>
