--- a/core/templates/search_box.html
+++ b/core/templates/search_box.html
@@ -3,7 +3,7 @@
 <div class="search_box">
     <form action="." method="post">
         {% csrf_token %}
-        {% if search_fields %}
+        {% if search_fields and search_fields|length > 1 %}
         {% for field, value in search_fields %}
         {% if value %}
         <label for="{{ field.attname }}">{{ field.verbose_name|capfirst }}</label>
@@ -21,7 +21,7 @@
         </select>
         {% endif %}
         <input class="query" type="text" name="search_query"/>
-        {% if search_fields %}
+        {% if search_fields and search_fields|length > 1 %}
         <button class="add" type="submit" name="add_search_field"><span>+</span></button>
         {% endif %}
         <input class="search" type="submit" name="search" value="{% trans 'Search' %}"/>
