Hide action labels in tables.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@204 71535020-02ba-11df-897e-95fb7fca2173

--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -271,6 +271,14 @@ table .actions {
     padding: 0;
 }
 
+table .actions li {
+    margin-right: 10px;
+}
+
+table .actions span {
+    display: none;
+}
+
 .disabled { color: #767676; }
 
 .errorlist {
