Added full support for messages framework in "projects" app and base prometeo's layout template.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@206 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/layout.html
+++ b/core/templates/layout.html
@@ -21,6 +21,15 @@
                     <h1>Prometeo</h1>
                     <h2>Free your work. Free your business.</h2>
                 </div>
+                <div id="messages">
+                    {% if messages %}
+                    <ul>
+                        {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </div>
             </div>
             <div id="nav">
                 {% block nav %}
