- Fixed backend in the "auth" app. - Fixed urls of the "auth" app. - Fixed views of the "auth" app. - Improved default theme.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@221 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -165,6 +165,7 @@ LOGIN_REQUIRED_URLS = (
 LOGIN_REQUIRED_URLS_EXCEPTIONS = (
     r'/media/(.*)$',
     r'/users/login/$',
+    r'/users/register/$',
 )
 
 if DEBUG:
