- Updated requirements notes in the README file. - Added "core.taxonomy" and "core.wysiwyg" apps to the "settings" template file.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@229 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -139,10 +139,12 @@ INSTALLED_APPS = (
     'django.contrib.markup',
     'django.contrib.redirects',
 
+    'prometeo.core.wysiwyg',
     'prometeo.core.breadcrumbs',
     'prometeo.core.menus',
     'prometeo.core.widgets',
     'prometeo.core.auth',
+    'prometeo.core.taxonomy',
 )
 
 # Authorization and login options.
