- Splitted "prometeo.core.auth" package in "auth" and "registration". - Added "index" template for the "homepage" rendering. - Fixed CSS for "form" elements.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@232 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -144,6 +144,7 @@ INSTALLED_APPS = (
     'prometeo.core.menus',
     'prometeo.core.widgets',
     'prometeo.core.auth',
+    'prometeo.core.registration',
     'prometeo.core.taxonomy',
 )
 
@@ -168,6 +169,7 @@ LOGIN_REQUIRED_URLS_EXCEPTIONS = (
     r'/media/(.*)$',
     r'/users/login/$',
     r'/users/register/$',
+    r'/users/activate/(.*)$',
 )
 
 if DEBUG:
