--- a/themes/default/templates/auth/login.html
+++ b/themes/default/templates/auth/login.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' '/users/' %}
+    {% add_crumb 'Users' 'users_list' %}
     {% add_crumb 'Login' %}
     {% render_breadcrumbs %}
 {% endblock %}
@@ -20,7 +20,6 @@
 
 {% block main %}
 <p>{% blocktrans %}Login using your <strong>username</strong> and <strong>password</strong>.{% endblocktrans %}</p>
-<p>{% blocktrans %}Are you not already registered? <a href="/users/register">Register now</a>.{% endblocktrans %}</p>
 <form method="post" action=".">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}" />
