--- a/themes/default/templates/auth/user_detail.html
+++ b/themes/default/templates/auth/user_detail.html
@@ -8,7 +8,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' '/users/' %}
+    {% add_crumb 'Users' 'users_list' %}
     {% add_crumb object %}
     {% render_breadcrumbs %}
 {% endblock %}
