--- a/themes/default/media/css/style.css
+++ b/themes/default/media/css/style.css
@@ -88,7 +88,7 @@ form input, form select {
     clear: left;
     padding: 3px;
     width: 270px;
-    margin-right: 600px;
+    margin-right: 100%;
     font-style: normal;
 }
 
