--- a/themes/default/templates/registration/register.html
+++ b/themes/default/templates/registration/register.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb 'Users' '/users/' %}
+    {% add_crumb 'Users' 'users_list' %}
     {% add_crumb 'Register' %}
     {% render_breadcrumbs %}
 {% endblock %}
