- Improved sidebar: it's now based on dynamic widgets. - Added widget with the user profile to the sidebar. - Improved CSS and layout.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@234 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -139,10 +139,11 @@ INSTALLED_APPS = (
     'django.contrib.markup',
     'django.contrib.redirects',
 
+    'prometeo.core',
     'prometeo.core.wysiwyg',
     'prometeo.core.breadcrumbs',
-    'prometeo.core.menus',
     'prometeo.core.widgets',
+    'prometeo.core.menus',
     'prometeo.core.auth',
     'prometeo.core.registration',
     'prometeo.core.taxonomy',
