--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -46,8 +46,8 @@
         <hr/>
         
         <div id="content">
-            <div id="menu">
-                {% include "menu.html" %}
+            <div id="sidebar">
+                {% region "sidebar" %} 
             </div>
 
             <div id="main">
