--- a/themes/default/templates/auth/user_list.html
+++ b/themes/default/templates/auth/user_list.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load avatar %}
+{% load details %}
 
 {% block meta_title %}{% trans "Users" %}{% endblock %}
 
@@ -19,19 +19,7 @@
 {% endblock %}
 
 {% block main %}
-<ul class="result-list">
-    {% for object in object_list %}
-    <li class="result">
-        {% avatar object %}
-        <span class="user-info">
-            <h3><a href="{{ object.get_absolute_url }}">{{ object.username }}</a></h3>
-            <span class="joined">{% blocktrans with object.date_joined as joined %}Joined on {{ joined }}{% endblocktrans %}</span>
-        </span>
-    </li>
-    {% empty %}
-    <li class="result"><span class="disabled">{% trans "No results found." %}</span></li>
-    {% endfor %}
-</ul>
-
+{% include 'search_box.html' %}
+{% detail_table object_list '["username", "first_name", "last_name", "email"]' %}
 {% include "elements/paginator.html" %}
 {% endblock %}
