- Added permission management on auth views. - Improved CSS.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@236 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/media/css/style.css
+++ b/themes/default/media/css/style.css
@@ -248,37 +248,29 @@ th { text-align: right; }
     background-color: #fffcaa;
 }
 
-.messages ul {
-    margin: 0;
+.messages ul, .errorlist {
+    margin: 0 0 10px;
     padding: 5px;
 }
 
-.messages li {
+.messages li, .errorlist li {
     padding-left: 40px;
     background-repeat: no-repeat;
     background-position: 10px 5px;
 }
 
-.messages li.error { background-image: url(images/error.png); }
+.errorlist {
+    border: 1px solid #d21717;
+    background: #ffe0e0;
+}
+
+.messages li.error, .errorlist li { background-image: url(images/error.png); }
 
 .messages li.info { background-image: url(images/info.png); }
 
 .messages li.warning { background-image: url(images/warning.png); }
 
 .messages li.success { background-image: url(images/success.png); }
-
-ul.errorlist {
-    padding: 5px;
-    border: 1px solid #d21717;
-    background: #ffe0e0;
-    margin-left: 0;
-}
-
-ul.errorlist li { background-image: url(images/error.png); }
-
-ul.result-list { margin-left: 0; }
-
-ul.result-list li { padding-left: 0; }
 
 /**
  * Layout.
