--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -36,7 +36,7 @@
 
             <div id="nav">
                 <div id="search">{% include "elements/search.html" %}</div>
-                <div id="bookmarks"></div>
+                <div id="bookmarks">{% include "elements/bookmarks.html" %}</div>
                 <div id="userarea">{% include "auth/userarea.html" %}</div>
             </div>
 
